Fix background stretch error on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,14 @@ body {
   background-image: url(../img/background.png);
   background-repeat: no-repeat;
   position: relative;
-  width: 85%;
-  height: 610px;
+  width: 100% auto;
+  height: 100% auto;
   margin-left: auto;
   margin-right: auto;
 }
 img {
   text-align: center;
   display: block;
-  margin: 0 auto;
+  margin: 5% auto;
   position: relative;
-  top: 20%;
 }
